// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className=" css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className=" css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
</div>
`;

exports[`with Badge 1`] = `
<div
  className=" css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className=" css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align 1`] = `
<div
  className="horizontalCenter css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className="center css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="center hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className="center css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Badge 1`] = `
<div
  className="horizontalCenter css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className="center css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className="center css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Link 1`] = `
<div
  className="horizontalCenter css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className="center css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="center hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className="center css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
  <div
    className=" css-n0wfp0-LinkTextStyle ejy78ug0"
  >
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
      href="https://www.dwolla.com"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "justifyContent": "flex-start",
        }
      }
      tabIndex={0}
      target="_blank"
    >
      Learn More
      <span
        className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </a>
  </div>
</div>
`;

exports[`with Center Align, Link and Badge 1`] = `
<div
  className="horizontalCenter css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className="center css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className="center css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
  <div
    className=" css-n0wfp0-LinkTextStyle ejy78ug0"
  >
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
      href="https://www.dwolla.com"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "justifyContent": "flex-start",
        }
      }
      tabIndex={0}
      target="_blank"
    >
      Learn More
      <span
        className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </a>
  </div>
</div>
`;

exports[`with Flex 1`] = `
<div
  className="flex css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-oo2is7-StyledFlexDiv ejy78ug4"
  >
    <div
      className="flex hasIcon css-3l2k0j-TopicStyle ejy78ug2"
    >
      topic
    </div>
    <div
      className=" css-1slm2rv-DescriptionStyle ejy78ug1"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex and Badge 1`] = `
<div
  className="flex css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-oo2is7-StyledFlexDiv ejy78ug4"
  >
    <div
      className="flex hasIcon css-3l2k0j-TopicStyle ejy78ug2"
    >
      topic
    </div>
    <div
      className=" css-1slm2rv-DescriptionStyle ejy78ug1"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`with Flex, Link and Badge 1`] = `
<div
  className="flex css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="css-oo2is7-StyledFlexDiv ejy78ug4"
  >
    <div
      className="flex hasIcon css-3l2k0j-TopicStyle ejy78ug2"
    >
      topic
    </div>
    <div
      className=" css-1slm2rv-DescriptionStyle ejy78ug1"
    >
      Description
    </div>
    <div
      className=" css-n0wfp0-LinkTextStyle ejy78ug0"
    >
      <a
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
        href="https://www.dwolla.com"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "justifyContent": "flex-start",
          }
        }
        tabIndex={0}
        target="_blank"
      >
        Learn More
        <span
          className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="OpenInNewIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`with Languages 1`] = `
<div
  className=" css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className="css-1bkc6o5-LanguageBadgeStyle ejy78ug5"
  >
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      CSS
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      handlebars
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      HTML
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      Java
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      JavaScript
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      kotlin
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      php
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      Python
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      ruby
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      shell
    </div>
    <div
      className="default css-usx4aq-StyledBadge e1sxbycx0"
    >
      TypeScript
    </div>
  </div>
  <div
    className=" css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className=" css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
  <div
    className=" css-n0wfp0-LinkTextStyle ejy78ug0"
  >
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
      href="https://www.dwolla.com"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "justifyContent": "flex-start",
        }
      }
      tabIndex={0}
      target="_blank"
    >
      Github Repository
      <span
        className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`with Link 1`] = `
<div
  className=" css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className=" css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
  <div
    className=" css-n0wfp0-LinkTextStyle ejy78ug0"
  >
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
      href="https://www.dwolla.com"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "justifyContent": "flex-start",
        }
      }
      tabIndex={0}
      target="_blank"
    >
      Learn More
      <span
        className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </a>
  </div>
</div>
`;

exports[`with Link and Badge 1`] = `
<div
  className=" css-zpgsmt-CardStyle ejy78ug8"
>
  <div
    className=" css-1ra2uvl-StyledIcon ejy78ug7"
  >
    <img
      alt=""
      src="test-image-stub"
    />
  </div>
  <div
    className="css-1hyoydr-BadgeStyle ejy78ug6"
  >
    <div
      className="css-usx4aq-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="hasIcon css-3l2k0j-TopicStyle ejy78ug2"
  >
    topic
  </div>
  <div
    className=" css-1slm2rv-DescriptionStyle ejy78ug1"
  >
    Description
  </div>
  <div
    className=" css-n0wfp0-LinkTextStyle ejy78ug0"
  >
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
      href="https://www.dwolla.com"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "justifyContent": "flex-start",
        }
      }
      tabIndex={0}
      target="_blank"
    >
      Learn More
      <span
        className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </a>
  </div>
</div>
`;
